# hdl-benchmarks

./: Cargo.toml  README.md
designs/: 10x10_x_10x10-mmult.v  15x15_x_15x15-mmult.v  16-bit-mult.v  32-bit-mult.v  5x5_x_5x5-mmult.v  adder.v  aes_core.v  aes_decryptor.v  aes_decryptor_no_kex.v  chi_squared.v  crc32.v  r45_c66-blur.v  v2-euclidean-distance.v  v32-euclidean-distance.v  v64-euclidean-distance.v
netlists/: 16-bit-mult-gates.v  16-bit-mult-lut-2-1.v  32-bit-mult-gates.v  8-bit-adder-lut.v  aes-core-lut-2-1.v  aes_core_gates.v  c1355-lut-2-1.v  c1355_lut.v  c1355_lut_2.v  c1355_lut_4.v  c17_lut.v  c17_lut_2.v  c17_lut_4.v  c1908-lut-2-1.v  c1908_lut.v  c1908_lut_2.v  c1908_lut_4.v  c2670-lut-2-1.v  c2670_lut.v  c2670_lut_2.v  c2670_lut_4.v  c3540-lut-2-1.v  c3540_lut.v  c3540_lut_2.v  c3540_lut_4.v  c432_lut.v  c432_lut_2.v  c432_lut_4.v  c499_lut.v  c499_lut_2.v  c499_lut_4.v  c5315-lut-2-1.v  c5315_lut.v  c5315_lut_2.v  c5315_lut_4.v  c6288-lut-2-1.v  c6288_lut.v  c6288_lut_2.v  c6288_lut_4.v  c7552-lut-2-1.v  (+20 more)
processed-netlists/: 16-bit-mult-gates.v  32-bit-mult-gates.v  5x5_x_5x5-mmult-arith.v  8-bit-adder-lut-2-1.v  8-bit-adder-lut-3-1.v  8-bit-adder-lut-high-precision.v  c1355_lut.v  c1355_lut_2.v  c1355_lut_4.v  c17.v  c17_lut.v  c17_lut_2.v  c17_lut_4.v  c1908_lut.v  c1908_lut_2.v  c1908_lut_4.v  c2670_lut.v  c2670_lut_2.v  c2670_lut_4.v  c3540_lut.v  c3540_lut_2.v  c3540_lut_4.v  c432_lut.v  c432_lut_2.v  c432_lut_4.v  c499_lut.v  c499_lut_2.v  c499_lut_4.v  c5315_lut.v  c5315_lut_2.v  c5315_lut_4.v  c6288_lut.v  c6288_lut_2.v  c6288_lut_4.v  c7552_lut.v  c7552_lut_2.v  c7552_lut_4.v  c880_lut.v  c880_lut_2.v  c880_lut_4.v  (+2 more)
src/: generate_adder.rs  generate_blur_filter.rs  generate_euclidean_distance.rs  generate_gaussian_blur_filter.rs  generate_mmult.rs  lib.rs  postprocess_blur_filter.rs  preprocessor.rs
test-cases/: 128-bit-mult.inputs.csv  16-bit-mult.inputs.csv  2-bit-adder.inputs.csv  2-bit-adder.outputs.csv  32-bit-mult.inputs.csv  8-bit-adder.inputs.csv  8-bit-adder.outputs.csv  aes.inputs.csv  bool_array.input.csv  chi_squared_arith_1.inputs.csv  chi_squared_arith_1.outputs.csv  chi_squared_arith_2.inputs.csv  chi_squared_arith_2.outputs.csv  (+8 more)
(+1 files in other folders)
