[package]
name = "hdl-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Dimitris Mouris <jimouris@udel.edu>", "Charles Gouert <cgouert@udel.edu>"]
license = "MIT"

[dependencies]
clap = "4.2.2"
csv = "1.1"
image = "0.23"
rand = "0.8"

[[bin]]
name = "preprocessor"
path = "src/preprocessor.rs"

[[bin]]
name = "generate_adder"
path = "src/generate_adder.rs"

[[bin]]
name = "generate_box_blur_filter"
path = "src/generate_box_blur_filter.rs"

[[bin]]
name = "generate_gaussian_blur_filter"
path = "src/generate_gaussian_blur_filter.rs"

[[bin]]
name = "postprocess_blur_filter"
path = "src/postprocess_blur_filter.rs"

[[bin]]
name = "generate_mmult"
path = "src/generate_mmult.rs"
