[package]
name = "hdl-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Dimitris Mouris <jimouris@udel.edu>", "Charles Gouert <cgouert@udel.edu>"]
license = "MIT"

[dependencies]
clap = "4.2.2"
csv = "1.1"
image = "0.23"
rand = "0.8"

[[bin]]
name = "preprocessor"
path = "src/bin/preprocessor.rs"

[[bin]]
name = "generate_adder"
path = "src/bin/generate_adder.rs"

[[bin]]
name = "generate_box_blur_filter"
path = "src/bin/generate_box_blur_filter.rs"

[[bin]]
name = "generate_gaussian_blur_filter"
path = "src/bin/generate_gaussian_blur_filter.rs"

[[bin]]
name = "postprocess_blur_filter"
path = "src/bin/postprocess_blur_filter.rs"

[[bin]]
name = "generate_mmult"
path = "src/bin/generate_mmult.rs"

[[bin]]
name = "generate_lr"
path = "src/bin/generate_lr.rs"

[[bin]]
name = "generate_euclidean_distance"
path = "src/bin/generate_euclidean_distance.rs"
